--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-boilerplate",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "commit": "cz",
@@ -9,7 +9,8 @@
     "format": "prettier . --write && prettier . --check",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "release": "standard-version --no-verify"
   },
   "husky": {
     "hooks": {
@@ -45,6 +46,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
